fixed horizontal scroll bar problem

--- a/css/main.css
+++ b/css/main.css
@@ -639,7 +639,9 @@ body > input[type="radio"] {
 
 				#steps article pre {
 					border-radius: 3px;
-					padding: 10px;
+					overflow-y:hidden;
+					/*overflow-x: scroll;
+					padding: 10px;*/
 					box-shadow: inset 0 0 2px rgba(0,0,0,0.35);
 					background: rgba(0,0,0,.15);
 					font-family: "source-code-pro",Monaco,Consolas,"Courier New",monospace;
@@ -864,19 +866,15 @@ body > input[type="radio"] {
 }
 
 .snippet {
+	/*margin-top:-10px;*/
 	position: relative;
+	overflow-y:scroll;
+	/*overflow-x:scroll;*/
 	width: 100%;
-	/*overflow: hidden;*/
 }
 
-.snippet ::-webkit-scrollbar-track {
-	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.0);
-	background: rgba(0,0,0,0.0);
-	border-radius: 4px;
-} 	
-
 .small{
-	height: 50px;
+	height: 30px;
 }
 
 .medium{
@@ -884,7 +882,7 @@ body > input[type="radio"] {
 }
 
 .large{
-	height: 250px;
+	height: 225px;
 }
 
 .justDoItContent{
